<resources>
    <string name="app_name">ArtWorks</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_recommend">Recommend</string>

    <string name="nothing_to_show">Nothing to show</string>
    <string name="no_likes">Nothing liked yet</string>
    <string name="all_likes_will_be_shown">All ArtWorks that you have liked will be shown here</string>
    <string name="no_artists">No liked artists yet</string>
    <string name="all_artists_will_be_shown">All artists that you have liked will be shown here</string>
    <string name="show_artists">Show artists</string>
    <string name="network_is_unavailable">Network is unavailable</string>
    <string name="download_error">Download error...</string>
    <string name="file_already_downloaded">File already downloaded</string>
    <string name="folder_my_arts_pictures">My Arts Pictures</string>
    <string name="application_does_not_have_permission_to_download_the_file">Sorry. The application does not have permission to download the file</string>
    <string name="search_artworks">Search ArtWorks in english</string>
    <string name="more_then">More then</string>
    <string name="items">items</string>
    <string name="http">http</string>
    <string name="copy_text">copy text</string>
    <string name="delete_query">delete query</string>
    <string name="sort_by">Sort ArtWorks by</string>
    <string name="th_century">th century</string>
    <string name="folders">Folders</string>
    <string name="organize_your_favorites">Organize your favorite artWorks into folders according to different criteria: author, subject, etc.</string>
    <string name="read_more">Read more</string>
    <string name="show_less">Show less</string>
    <string name="wikipedia">WikipediA</string>
    <string name="artworks_count">Artworks count:</string>
    <string name="artworks">artworks</string>
    <string name="now">Now</string>
    <string name="all">All</string>
    <string name="zero_zero_date_filter">00</string>
    <string name="artists">Artists</string>
    <string name="artist_culture">Artist culture</string>
    <string name="art_mediums">Art mediums</string>
    <string name="art_classifications">Art classifications</string>
    <string name="art_tags">Art tags</string>
    <string name="folder_title">Folder title</string>
    <string name="create_folder">Create folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="public_visible_to_all_users">Public - visible to all users</string>
    <string name="count">Count:</string>
    <string name="private_visible_only_to_me">Private - visible only to me</string>
    <string name="specify_folder_title_please">Specify folder title, please</string>
    <string name="choose_at_least_one_image_please">Choose at least one image, please</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_data_will_not_be_saved">The data will not be saved</string>
    <string name="want_to_delete">Are you sure you want to delete this folder?</string>
    <string name="folders_with_this_art">Folders with this art:</string>
    <string name="filters">Filters</string>
    <string name="filters_">Filters:</string>
    <string name="centuries">Centuries</string>
    <string name="keywords">Keywords</string>
    <string name="clear_filter">Clear filter</string>
    <string name="century">-century</string>
    <string name="search_favorites">Search favorites</string>
    <string name="search_artists">Search artists</string>
    <string name="search_keywords">Search keywords</string>
    <string name="popular_artists">Popular artists</string>
    <string name="liked">Liked</string>
    <string name="save_to">Save to</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">New folder</string>
    <string name="done">Done</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="by_creating_an_account_i_accept_artwork_s">By creating an account, I accept ArtWork\'s</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_in_to_save_your_favorites_artworks_and_artists_to_user_account">Sign in to save your favorites ArtWorks and Artists to user account</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="write_to_us">Write to us</string>
    <string name="share_app">Share app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="user_id">User ID:</string>
    <string name="artworks_email_from_user">ArtWorks - email from user</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log out?</string>
    <string name="saved_artworks_and_authors_will_not_be_deleted">Saved ArtWorks and Authors will not be deleted. But they won\'t be tied to your email. When you uninstall the application, the data cannot be recovered</string>
    <string name="want_to_delete_account">Are you sure you want to delete account?</string>
    <string name="create_a_new_folder_from_liked_artworks">Create a new folder from liked ArtWorks</string>
    <string name="given_name">Given name</string>
    <string name="family_name">Family name</string>
    <string name="save">Save</string>
    <string name="photo_will_be_inserted_without_cropping">The photo will be inserted without cropping</string>
    <string name="application_does_not_have_permission_to_choose_the_photo">Sorry. The application does not have permission to choose the photo</string>
    <string name="specify_given_name_please">Specify given name, please</string>
    <string name="google">https://google.com</string>

</resources>
