<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueFilter"
    android:padding="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/app_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <TextView
            android:id="@+id/app_title"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            android:fontFamily="@string/font_sans_serif"
            android:text="@string/app_name"
            android:layout_marginLeft="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/main_text"
        android:text="@string/sign_in_to_save_your_favorites_artworks_and_artists_to_user_account"
        android:textColor="@color/colorBlack"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/app_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        app:layout_constraintTop_toBottomOf="@id/main_text"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in_google"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:lottie_rawRes="@raw/female_creative_artist_with_ideas"
        app:lottie_loop="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateTint="@color/colorBlue"
        android:indeterminate="true"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:scaleY="2"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in_google"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toTopOf="@id/by_creating_an_account"
        android:background="@drawable/button_sign_in"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/google_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_google_logo"
            android:layout_marginLeft="22dp"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <View
            android:id="@+id/delim_google_btn"
            app:layout_constraintLeft_toRightOf="@id/google_icon"
            android:layout_marginLeft="22dp"
            android:background="@color/colorBlueFilter"
            android:layout_width="2dp"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/continue_with_google"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@string/font_sans_serif"
            android:textSize="18sp"
            android:minLines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:id="@+id/text_google_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/delim_google_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/by_creating_an_account"
        android:text="@string/by_creating_an_account_i_accept_artwork_s"
        android:textColor="@color/colorBlack"
        android:fontFamily="@string/font_sans_serif"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/privacy_policy_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/privacy_policy_tv"
        android:text="@string/privacy_policy"
        android:textColor="@color/colorBlue"
        android:fontFamily="@string/font_sans_serif_black"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/terms_and_conditions_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/terms_and_conditions_tv"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/colorBlue"
        android:fontFamily="@string/font_sans_serif_black"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>