<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:clipToPadding="false"
        android:paddingTop="150dp"
        android:layout_marginBottom="0dp"
        android:id="@+id/recycler_view_items"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blank_favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_favorites"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_outline_photo_size_select_actual_100"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:visibility="visible"
            android:id="@+id/title_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="sans-serif"
            android:text="@string/no_likes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_favorites"
            android:gravity="center_horizontal" />

        <TextView
            android:visibility="visible"
            android:id="@+id/text_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:text="@string/create_a_new_folder_from_liked_artworks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_favorites"
            android:gravity="center_horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:clickable="true"
        android:background="#ccffffff"
        android:id="@+id/title_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageButton
                android:id="@+id/back_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/title"
                android:background="@drawable/ic_keyboard_backspace_black_100dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/create_folder"
                android:textColor="@color/colorBlack"
                android:fontFamily="@string/font_sans_serif"
                android:textSize="22sp"
                android:minLines="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:id="@+id/title_edit_text"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorBlue"
                android:hint="@string/folder_title"
                android:drawableRight="@drawable/ic_baseline_edit_24"
                android:background="@drawable/border_edit_text_create_folder"
                android:textSize="18dp"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_isPublic"
                app:layout_constraintTop_toBottomOf="@id/title_edit_text"
                app:layout_constraintLeft_toLeftOf="parent"
                android:checked="true"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:text="@string/public_visible_to_all_users"
                android:textColor="@color/colorBlack"
                android:fontFamily="@string/font_sans_serif"
                android:textSize="14sp"
                android:ellipsize="end"
                android:id="@+id/switch_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/switch_isPublic"
                app:layout_constraintBottom_toBottomOf="@id/switch_isPublic"
                app:layout_constraintTop_toTopOf="@id/switch_isPublic" />

            <TextView
                android:layout_marginRight="5dp"
                android:text="@string/count"
                android:textColor="@color/colorBlack"
                android:fontFamily="@string/font_sans_serif"
                android:textSize="14sp"
                android:ellipsize="end"
                android:id="@+id/items_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toLeftOf="@id/items_count"
                app:layout_constraintTop_toTopOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/title" />

            <TextView
                android:text="0"
                android:textColor="@color/colorBlack"
                android:fontFamily="@string/font_sans_serif"
                android:textSize="14sp"
                android:ellipsize="end"
                android:id="@+id/items_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/download_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateTint="@color/colorBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="7dp"
        android:minHeight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="15dp"
        android:id="@+id/floating_button"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_baseline_playlist_add_check_100_black"
        android:elevation="8dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>