<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artists_swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:clipToPadding="false"
            android:paddingBottom="50dp"
            android:id="@+id/recycler_view_artists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blank_artists"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="94dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_artists"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_baseline_color_lens_100"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <TextView
                android:visibility="visible"
                android:id="@+id/title_artists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="80dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="sans-serif"
                android:text="@string/no_artists"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_artists"
                android:gravity="center_horizontal" />

            <TextView
                android:visibility="visible"
                android:id="@+id/text_artists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="80dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:text="@string/all_artists_will_be_shown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_artists"
                android:gravity="center_horizontal" />

            <TextView
                android:visibility="visible"
                android:id="@+id/link_artists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="80dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/colorBlueLight"
                android:fontFamily="@string/font_sans_serif_black"
                android:text="@string/show_artists"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_artists"
                android:gravity="center_horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:layout_marginBottom="94dp"
            android:indeterminateTint="@color/colorBlue"
            android:id="@+id/progress_bar_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>







